--- a/src/styles.css
+++ b/src/styles.css
@@ -34,13 +34,6 @@ body {
   color: var(--honey-color);
 }
 
-button.primary {
-  padding: 10px;
-  border: solid 1px var(--primary-color);
-  background: var(--primary-color);
-  color: white;
-  border-radius: 8px;
-}
 
 /** #####################################################
     #                 GENERIC                           #
@@ -73,7 +66,8 @@ q::after {
   display: inline-block;
   transform: rotate(13deg);
 }
-strong{
+
+strong {
   font-weight: bolder;
 }
 
@@ -104,13 +98,18 @@ strong{
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  color: var(--honey-color); 
-  /* color: var(--global-color-title);
-  font-family: "Dosis", Sans-serif; */
+  font-family: "Dosis", Sans-serif;
+}
+
+.title_Bloque {
+  display: flex;
+  flex-direction: row;
+  color: var(--global-color-title);
+  padding: 20px;
 }
 
 .allIcon {
-  /* font-size: 30px;*/
+
   background-color: var(--honey-color);
   text-shadow: 2px 2px 4px var(--text-shadow-color);
   z-index: 9999;
@@ -242,7 +241,7 @@ strong{
   content: url("/assets/location-pin.svg") / "";
 }
 
-.background-image{
+.background-image {
   background-image: url('/assets/img/pexels-lamiko-3616764.jpg');
 }
 
@@ -473,6 +472,37 @@ section.listing a::after {
     #                ESTILOS BOTONES                          #
     #######################################################*/
 
+button.primary {
+  padding: 10px;
+  border: solid 1px var(--primary-color);
+  background: var(--honey-color);
+  color: white;
+  border-radius: 8px;
+}
+
+
+.button_main {
+  background-color: var(--honey-color);
+  color: var(--primary-color);
+  font-size: 1.0rem;
+  font-weight: 700;
+  line-height: 2;
+  position: relative;
+  border: none;
+  border-radius: 10px;
+  transition: 0.5s;
+  box-shadow: 0 0 10px #363636, inset 0 0 10px var(--shadow-color);
+  padding: 10px 20px;
+  transition:
+    scale 0.25s ease-in,
+    opacity 0.25s ease-in filter 0.25s ease-in;
+
+  &:hover {
+    scale: 1.2;
+  }
+
+}
+
 .activebutton {
   box-shadow: inset 0 1px 0 0 #dcecfb;
   background: #f9d686 linear-gradient(to bottom, #f1d697 5%, #f9d686 100%);
@@ -612,6 +642,7 @@ section.listing a::after {
     height: 150px;
     /* Ajusta la altura según sea necesario */
   }
+
   .newspaper-section {
     width: 100%;
   }
