--- a/src/app/products/courses-honey/details-cours/details-cours.component.html
+++ b/src/app/products/courses-honey/details-cours/details-cours.component.html
@@ -4,7 +4,18 @@
         <div class="flex-container-col">
             <section class="listing-description">
                 <h2 class="listing-heading">{{coursHoney?.title}}</h2>
-                <h5 class="title"> Datos del curso</h5>
+
+                <div class="title_Bloque">
+
+                    <div class="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                            <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                                stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                        </svg>
+                    </div>
+
+                    <h2 class="">Datos del curso</h2>
+                </div>
                 <p class="listing-location">{{coursHoney?.ubication}}</p>
                 <p class="">{{'Price'|translate}}: {{coursHoney?.price | currency }}, (INCLUYE LA COMIDA DEL PRIMER DÍA)
                 </p>
@@ -26,9 +37,9 @@
         </div>
     </section>
 
-<section>
-    <app-course-one></app-course-one>
-</section>
+    <section>
+        <app-course-one></app-course-one>
+    </section>
 
     <section>
         <h2 class="title"> {{'Cours.Other_Courses'|translate}}</h2>
