redirection hacia registration

--- a/src/app/functionalities/static-text/course-one/course-one.component.html
+++ b/src/app/functionalities/static-text/course-one/course-one.component.html
@@ -76,7 +76,7 @@
     </div>
     <div class="flex-item left-block">
         <div class="content-wrapper">
-            <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/">
+            <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/registration">
                 Reservar Curso
             </button>
             <div class="title_Bloque">
