el contenido del componente registration

--- a/src/app/functionalities/registration/registration.component.html
+++ b/src/app/functionalities/registration/registration.component.html
@@ -1,1 +1,59 @@
-<p>registration works!</p>
+<section>
+    <div class="effects-layer effects-layer-title">
+        <h2 class="effects-layer-title">Reservar curso</h2>
+
+    </div>
+    <section>
+        <div class="title_Bloque">
+
+            <div class="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                        stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                </svg>
+            </div>
+
+            <h2 class="">¿Cómo reservar?</h2>
+        </div>
+        <div>
+            <p>¿Te ha gustado alguno de nuestros cursos? Te damos 4 opciones que se adaptan a tus necesidades para
+                reservar
+            </p>
+        </div>
+    </section>
+
+    <section class="flex-container">
+        <div class="flex-container-col">
+            <h2 class="title"> Whatsapp</h2>
+            <p>Háblanos por Whatsapp y reserva ya el curso</p>
+            <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                routerLink="/registration">
+                MANDAR WHATSAPP
+            </button>
+        </div>
+        <div class="flex-container-col">
+            <h2 class="title"> Teléfono</h2>
+            <p>Llámanos y reserva tu curso</p>
+            <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                routerLink="/registration">
+                LLAMAR AHORA
+            </button>
+        </div>
+        <div class="flex-container-col">
+            <h2 class="title"> Correo electrónico</h2>
+            <p>Envíanos un correo electrónico con el curso elegido</p>
+            <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                routerLink="/registration">
+                MANDAR EMAIL
+            </button>
+        </div>
+
+
+    </section>
+    <section class="flex-container">
+        <app-contact-us></app-contact-us>
+        <app-follow-us></app-follow-us>
+    </section>
+
+
+</section>
