--- a/src/styles.css
+++ b/src/styles.css
@@ -489,6 +489,7 @@ button.primary {
   line-height: 2;
   position: relative;
   border: none;
+  cursor: pointer;
   border-radius: 10px;
   transition: 0.5s;
   box-shadow: 0 0 10px #363636, inset 0 0 10px var(--shadow-color);
