poner el titulo dentro del componente policies

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
             <app-whereare></app-whereare>
         </section>
         <section>
-            <h3 class="title">Condition de ventes</h3>
+            <!-- <h3 class="title">Condition de ventes</h3> -->
             <app-policies></app-policies>
         </section>
 
