--- a/src/app/about/policies/policies.component.html
+++ b/src/app/about/policies/policies.component.html
@@ -1,6 +1,16 @@
 <section>
     <div class="flex-container ltr">
-       
+        <div class="title_Bloque">
+
+            <div class="">
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                    <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                        stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                </svg>
+            </div>
+
+            <h2 class="">Condition de ventes</h2>
+        </div>
         <div class="">
             
             <p>Nous nous engageons à fournir des produits de qualité supérieure à nos clients. Si pour une raison
