--- a/src/app/about/delivery/delivery.component.html
+++ b/src/app/about/delivery/delivery.component.html
@@ -1,7 +1,15 @@
 <section [ngClass]="{'rtl': translate.currentLang  === 'ar', 'ltr': translate.currentLang  === 'en'}">
     <div class="flex-container">
-        <div class="flex-container-col">
-            <h3 class="title">{{'About.Delivery.Title' | translate}}</h3>
+            <div class="title_Bloque">
+                <div class="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="43" viewBox="0 0 10 43">
+                        <line id="Línea_10" data-name="Línea 10" y2="33" transform="translate(5 5)" fill="none"
+                            stroke="#e89002" stroke-linecap="round" stroke-width="10"></line>
+                    </svg>
+                </div>
+
+                <h2 class="">{{'About.Delivery.Title' | translate}}</h2>
+            </div>
             <div class="rte">
                 <p>{{'About.Delivery.Deliver_Anywhere' | translate}}</p>
             </div>
@@ -61,6 +69,6 @@
             <div class="rte">
                 <p>{{'About.Delivery.Cash_Delivery'| translate}}</p>
             </div>
-        </div>
+
     </div>
 </section>
