--- a/src/app/products/courses-honey/details-cours/details-cours.component.html
+++ b/src/app/products/courses-honey/details-cours/details-cours.component.html
@@ -17,7 +17,7 @@
                     <h2 class="">Datos del curso</h2>
                 </div>
                 <p class="listing-location">{{coursHoney?.ubication}}</p>
-                <p class="">{{'Price'|translate}}: {{coursHoney?.price | currency }}, (INCLUYE LA COMIDA DEL PRIMER DÍA)
+                <p class="">{{'Price'|translate}}: {{coursHoney?.price | currency }}, ({{'Courses.Lunch'|translate}})
                 </p>
 
                 <ul>
