--- a/src/app/functionalities/static-text/course-one/course-one.component.html
+++ b/src/app/functionalities/static-text/course-one/course-one.component.html
@@ -33,19 +33,21 @@
                         </svg>
                     </div>
 
-                    <h2 class="">Información importante</h2>
+                    <h2 class="">{{'Cours.ImportantInformation'|translate}}</h2>
                 </div>
-                <p>Recuerda traer ropa y calzado que sea cómoda y práctica para salir al campo.</p>
-                <p>Si vienes de lejos y necesitas quedarte a dormir por la zona, te podemos ayudar con la gestión
-                    del alojamiento, con precios muy competitivos.</p>
-                <p>El curso está formado por una parte teórica y otra práctica, en la que los alumnos podrán tener
-                    contacto con las abejas, manejar una colmena, etc., en definitiva repasar y tocar in situ todo
-                    lo visto en la parte teórica.</p>
-                <p>La parte práctica se hará en un apiario, situado junto al aula de formación, evitando así
-                    perdidas de tiempo en desplazamientos.</p>
-                <p>Para garantizar la calidad y atención personalizada, todos nuestros cursos tienen plazas
-                    limitadas, por lo que es necesario reservar previamente para asegurase de la disponibilidad de
-                    plazas.</p>
+                <ul>
+                    <li> traer ropa y calzado que sea cómoda y práctica para salir al campo.</li>
+                    <li>Si vienes de lejos y necesitas quedarte a dormir por la zona, te podemos ayudar con la gestión
+                        del alojamiento, con precios muy competitivos.</li>
+                    <li>El curso está formado por una parte teórica y otra práctica, en la que los alumnos podrán tener
+                        contacto con las abejas, manejar una colmena, etc., en definitiva repasar y tocar in situ todo
+                        lo visto en la parte teórica.</li>
+                    <li>La parte práctica se hará en un apiario, situado junto al aula de formación, evitando así
+                        perdidas de tiempo en desplazamientos.</li>
+                    <li>Para garantizar la calidad y atención personalizada, todos nuestros cursos tienen plazas
+                        limitadas, por lo que es necesario reservar previamente para asegurase de la disponibilidad de
+                        plazas.</li>
+                </ul>
             </div>
             <div>
                 <div class="title_Bloque">
@@ -71,13 +73,14 @@
             </div>
         </div>
         <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/">
-            Reservar Curso
+            {{'Cours.BookCourse'|translate}}
         </button>
     </div>
     <div class="flex-item left-block">
         <div class="content-wrapper">
-            <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page" routerLink="/registration">
-                Reservar Curso
+            <button class="button_main" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                routerLink="/registration">
+                {{'Cours.BookCourse'|translate}}
             </button>
             <div class="title_Bloque">
 
@@ -88,7 +91,7 @@
                     </svg>
                 </div>
 
-                <h2 class="">Temario</h2>
+                <h2 class=""> {{'Cours.Program'|translate}}</h2>
             </div>
             <p><strong>INTRODUCCIÓN A LA APICULTURA</strong></p>
             <p>Conceptos básicos de apicultura<br>
