--- a/src/app/products/courses-honey/details-cours/details-cours.component.html
+++ b/src/app/products/courses-honey/details-cours/details-cours.component.html
@@ -14,7 +14,7 @@
                         </svg>
                     </div>
 
-                    <h2 class="">Datos del curso</h2>
+                    <h2 class="">{{'Courses.Course_Data'|translate}}</h2>
                 </div>
                 <p class="listing-location">{{coursHoney?.ubication}}</p>
                 <p class="">{{'Price'|translate}}: {{coursHoney?.price | currency }}, ({{'Courses.Lunch'|translate}})
@@ -24,12 +24,12 @@
                     <li>{{'Location'|translate}}: {{coursHoney?.state}}</li>
                     <li>{{'Duration'|translate}}: {{coursHoney?.duration}}: Curso de dos días
                         <ul>
-                            <li>Primer día de 8:30 a 20:00, pararemos al medio día para ir a comer todos juntos</li>
-                            <li>Segundo día: de 9:00 a 13:30</li>
+                            <li>{{'Courses.First_Day'|translate}}: de 8:30 a 20:00, {{'Courses.Lunch_Break'|translate}}</li>
+                            <li>{{'Courses.Second_Day'|translate}}: de 9:00 a 13:30</li>
                         </ul>
                     </li>
                 </ul>
-                <p>Fechas: 6 y 7 de Julio</p>
+                <p>{{'Date'|translate}}: 6 y 7 de Julio</p>
             </section>
         </div>
         <div>
