--- a/src/app/about/activities/activities.component.html
+++ b/src/app/about/activities/activities.component.html
@@ -28,11 +28,11 @@
                     <div class="overlay"></div>
                 </div>
                 <div class="product-info">
-                    <p>Nombre</p>
+                    <p>{{'Cours.Title'|translate}}</p>
                     <div class="product-price">65</div>
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                            routerLink="/Cours"> {{'See_Our_Products'|translate}}
+                            routerLink="/cours"> {{'See_Our_Products'|translate}}
                         </a>
                     </button>
                 </div>
@@ -46,7 +46,7 @@
                     <div class="overlay"></div>
                 </div>
                 <div class="product-info">
-                    <p>Nombre</p>
+                    <p>{{'Material.Pollen'|translate}}</p>
                     <div class="product-price">65</div>
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
@@ -65,7 +65,7 @@
                     <div class="overlay"></div>
                 </div>
                 <div class="product-info">
-                    <p>Nombre</p>
+                    <p>{{'Material.Title'|translate}}</p>
                     <div class="product-price">65</div>
                     <button class="btn-buy">
                         <a href="" class="" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
