--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,10 @@
                     routerLink="/about">
                     {{'About.Title'|translate}}
                 </a>
+                <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
+                routerLink="/stock">
+                Stock
+            </a>
 
             </nav>
         </div>
