Crear el módulo oculto: Define el módulo y ocúltalo por defecto. Configurar el atajo de teclado: Utiliza una biblioteca como @angular/cdk/a11y para manejar los atajos de teclado. Mostrar/ocultar el módulo con el atajo de teclado: Implementa la lógica para mostrar/ocultar el módulo cuando se presione el atajo de teclado.Con estos pasos, el StockComponent solo se mostrará cuando el usuario presione Ctrl+alt+c. Esto es logrado mediante el uso de @HostListener para escuchar eventos del teclado y cambiar el estado de showStockComponent, que controla si el StockComponent se debe renderizar o no.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
                     {{'About.Title'|translate}}
                 </a>
                 <a class="spanMHS menu__link" routerLinkActive="activebutton" ariaCurrentWhenActive="page"
-                routerLink="/stock">
+                routerLink="/stock"  *ngIf="showStockComponent">
                 Stock
             </a>
 
