--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -1,29 +1,32 @@
 <section>
     <div class="cart-list">
-        <div>
-            <img class="cart-img" [src]="housingLocation.photo" alt="Exterior photo of {{housingLocation.name}}" />
-          </div>
-          <div class="cart-item" *ngIf="housingLocation.type=== 'HN'">
-            <div class="cart-item-details">
-              {{ housingLocation.name }} -
-              {{ housingLocation.quantity }} -
-              {{ housingLocation.weight }} g -
-              {{getPrice() | currency }}
+        <div class="flex-container cart-box">
+            <div>
+                <img class="cart-img" [src]="housingLocation.photo" alt="Exterior photo of {{housingLocation.name}}" />
             </div>
-            <!-- <div class="cart-item-actions">
-              <span class="btn-delete" (click)="removeItem(item.id)">
-                <i class="fas fa-trash-alt"></i>
-              </span>
-              <input class="input-quantity" type="number" [(ngModel)]="item.quantity"
-                (change)="updateItem(item.id, item.quantity, item.weight, item.price)">
-              <select class="input-weight styled-select" [(ngModel)]="item.weight"
-                (change)="updateItem(item.id, item.quantity, item.weight, item.price)">
-                <option value="1000">1000g</option>
-                <option value="500">500g</option>
-                <option value="250">250g</option>
-              </select>
-            </div> -->
-          </div>
+            <div class="cart-item" *ngIf="housingLocation.type=== 'HN'">
+                <div class="cart-item-details">
+                    {{ housingLocation.name }} -
+                    {{ housingLocation.quantity }} -
+                    {{ housingLocation.weight }} g -
+                    {{getPrice() | currency }}
+                </div>
+                <!-- <div class="cart-item-actions">
+                  <span class="btn-delete" (click)="removeItem(item.id)">
+                    <i class="fas fa-trash-alt"></i>
+                  </span>
+                  <input class="input-quantity" type="number" [(ngModel)]="item.quantity"
+                    (change)="updateItem(item.id, item.quantity, item.weight, item.price)">
+                  <select class="input-weight styled-select" [(ngModel)]="item.weight"
+                    (change)="updateItem(item.id, item.quantity, item.weight, item.price)">
+                    <option value="1000">1000g</option>
+                    <option value="500">500g</option>
+                    <option value="250">250g</option>
+                  </select>
+                </div> -->
+            </div>
+        </div>
+
 
     </div>
 </section>
