--- a/src/app/stock/stock-honey/stock-honey.component.html
+++ b/src/app/stock/stock-honey/stock-honey.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="cart-list">
         <div class="flex-container cart-box">
-            <div>
+            <div class="image-container">
                 <img class="cart-img" [src]="housingLocation.photo" alt="Exterior photo of {{housingLocation.name}}" />
                 <!-- Botón para cargar nueva imagen -->
                 <button (click)="fileInput.click()">Cargar nueva imagen</button>
